fixed a few escape issues and spacing

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -313,6 +313,10 @@ body {
         }
     }
 
+    .misc-photos {
+        margin-top: 50px;
+    }
+
     .pull-right {
         float: right;
         margin-left: 40px;
